[gd_scene load_steps=22 format=3 uid="uid://cyelhsjbco3s0"]

[ext_resource type="Script" path="res://scripts/shield.gd" id="1_tcrbl"]
[ext_resource type="Texture2D" uid="uid://dnyqs7dy10ey4" path="res://assets/bahan/star/collect1.png" id="2_h5eog"]
[ext_resource type="Texture2D" uid="uid://cv7yavax2desh" path="res://assets/bahan/star/collect2.png" id="3_qmccy"]
[ext_resource type="Texture2D" uid="uid://ccsd5bbpd0nki" path="res://assets/bahan/star/collect3.png" id="4_obha7"]
[ext_resource type="Texture2D" uid="uid://dtu444xoty4cd" path="res://assets/bahan/star/collect4.png" id="5_yt4d8"]
[ext_resource type="Texture2D" uid="uid://btorg28pjdh02" path="res://assets/bahan/star/collect5.png" id="6_1xaj1"]
[ext_resource type="Texture2D" uid="uid://boam0dg2yj0tc" path="res://assets/bahan/star/collect6.png" id="7_u4tmg"]
[ext_resource type="Texture2D" uid="uid://cpuq56jufkwlv" path="res://assets/bahan/star/collect7.png" id="8_r8ttn"]
[ext_resource type="Texture2D" uid="uid://sugmlhgtt1y2" path="res://assets/bahan/star/collect8.png" id="9_rkm14"]
[ext_resource type="Texture2D" uid="uid://dqukbfjc1jv8d" path="res://assets/bahan/star/collect9.png" id="10_1fsxt"]
[ext_resource type="Texture2D" uid="uid://q0fyw33vyete" path="res://assets/bahan/star/collect10.png" id="11_u4s47"]
[ext_resource type="Texture2D" uid="uid://cr2bw0nj7xwt4" path="res://assets/bahan/star/collect11.png" id="12_j2xnn"]
[ext_resource type="Texture2D" uid="uid://cxxuxekccg2h" path="res://assets/bahan/star/collect12.png" id="13_581md"]
[ext_resource type="Texture2D" uid="uid://c457mh71flnqw" path="res://assets/bahan/star/collect13.png" id="14_r31cg"]
[ext_resource type="Texture2D" uid="uid://cnqqrhh0unsm0" path="res://assets/bahan/star/collect14.png" id="15_16p5n"]
[ext_resource type="Texture2D" uid="uid://c7cu065v13ju2" path="res://assets/bahan/star/collect15.png" id="16_nmsfv"]
[ext_resource type="Texture2D" uid="uid://ic7invddrbfc" path="res://assets/bahan/star/collect16.png" id="17_wco0r"]
[ext_resource type="Texture2D" uid="uid://bvanbgyrinu7c" path="res://assets/bahan/shield/shield with bubble.png" id="18_21a5p"]
[ext_resource type="AudioStream" uid="uid://nwu0ms65gmwf" path="res://assets/sounds/saiyan.wav" id="19_yk5qr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wepi0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h5eog")
}, {
"duration": 1.0,
"texture": ExtResource("3_qmccy")
}, {
"duration": 1.0,
"texture": ExtResource("4_obha7")
}, {
"duration": 1.0,
"texture": ExtResource("5_yt4d8")
}, {
"duration": 1.0,
"texture": ExtResource("6_1xaj1")
}, {
"duration": 1.0,
"texture": ExtResource("7_u4tmg")
}, {
"duration": 1.0,
"texture": ExtResource("8_r8ttn")
}, {
"duration": 1.0,
"texture": ExtResource("9_rkm14")
}, {
"duration": 1.0,
"texture": ExtResource("10_1fsxt")
}, {
"duration": 1.0,
"texture": ExtResource("11_u4s47")
}, {
"duration": 1.0,
"texture": ExtResource("12_j2xnn")
}, {
"duration": 1.0,
"texture": ExtResource("13_581md")
}, {
"duration": 1.0,
"texture": ExtResource("14_r31cg")
}, {
"duration": 1.0,
"texture": ExtResource("15_16p5n")
}, {
"duration": 1.0,
"texture": ExtResource("16_nmsfv")
}, {
"duration": 1.0,
"texture": ExtResource("17_wco0r")
}],
"loop": false,
"name": &"collect",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_21a5p")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6p5p"]
radius = 24.0

[node name="shield" type="Area2D" groups=["platform"]]
script = ExtResource("1_tcrbl")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.315613, 0.315613)
sprite_frames = SubResource("SpriteFrames_wepi0")
animation = &"collect"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x6p5p")

[node name="sfx_shield" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_yk5qr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
